add pagination to GET /tags
